  * debian/rules:
    - Drop create and install the /etc/sane.d/dll.d directory.
    - Move rules from override_dh_install-arch and override_dh_auto_install-arch
      to override_dh_install-indep and override_dh_auto_install-indep
      to build the arch all packages without error (CLoses: #870455).
    - At dh_systemd_enable use debian/saned.socket instead saned.socket.
  * Move libsane-common.install.in to libsane-common.install.
  * debian/copyright:
    - Add year 2017 for debian/*.
  * New debian/patches/0150-genesys-Fix-use-of-uninitialized-variable.patch:
    - Initializing usb_mode (Closes:# 869673).
      Thanks to Florian Lindemann <linde@bfw-online.de> and
      Olaf Meeuwissen <paddy-hack@member.fsf.org>.
  * Move install of man pages from debian/rules to libsane-common.manpages and
    sane-utils.manpages (Closes: #872366).
  * Move umax_pp.5 from libsane-common to sane-utils.
  * debian/sane-utils.saned.init:
    - Add parameter to --retry at the stop section (Closes: #871543).
  * libsane1.README.Debian:
    - Remove references to the libsane-extras package.
  * Correct typos in the previous changelog entry.
  * Declare compliance with Debian Policy 4.1.1 (No changes needed).
  * Move rm_conffile from libsane-common.preinst to libsane-common.maintscript.

 -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Tue, 17 Oct 2017 21:47:01 +0200

sane-backends (1.0.27-1~experimental2) experimental; urgency=medium

  * debian/rules:
    - Rename libsane.udev to libsane1.udev to make sure that
      60-libsane1.rules is actually created (Closes: #868312).
  * Rename libsane.udev to libsane1.udev in TROUBLESHOOTING.Debian
    and libsane1.README.Debian.
  * debian/control:
    - Add Breaks and Replaces against libsane to libsane1
      binary package (Closes: #868308).
    - Remove outdated Recommends libsane-extras to libsane1
      binary package (Closes: #868265).
    - Remove [!hurd-i386] from libusb-1.0-0-dev Build-Dependency.
  * debian/sane-utils.postrm: